--- a/sfdx-source/force-app/main/default/classes/selectors/ISubscriptionsSelector.cls
+++ b/sfdx-source/force-app/main/default/classes/selectors/ISubscriptionsSelector.cls
@@ -6,6 +6,6 @@
 public interface ISubscriptionsSelector extends fflib_ISObjectSelector
 {
     List<Subscription__c> selectById(Set<Id> ids);
-    List<Subscription__c> selectByCustomerAndSharedSolarSystem(List<Subscription__c> subscriptions);
+    List<Subscription__c> selectByCustomerAndSharedSolarSystem(List<Subscription__c> records);
     List<Subscription__c> selectByCustomerAndSharedSolarSystem(Set<Id> customerIds, Set<Id> sharedSolarSystemIds);
 }
