--- a/sfdx-source/force-app/main/default/classes/ApplicationSObjects.cls
+++ b/sfdx-source/force-app/main/default/classes/ApplicationSObjects.cls
@@ -16,6 +16,14 @@ public virtual inherited sharing class ApplicationSObjects extends fflib_SObject
         super(sObjects, sObjectType);
     }
 
+    /**
+     * Get records where its field value is greater than or equal to given
+     * value.
+     *
+     * @param field Date field.
+     * @param value Date value.
+     * @return  `List<SObject>` List of SObject where its Date field >= value.
+     */
     protected virtual List<SObject> getRecordsByFieldGreaterThanOrEqualToValue(Schema.SObjectField field, Date value)
     {
         List<SObject> result = new List<SObject>();
@@ -31,6 +39,13 @@ public virtual inherited sharing class ApplicationSObjects extends fflib_SObject
         return result;
     }
 
+    /**
+     * Get records where its field value is less than or equal to given value.
+     *
+     * @param field Date field.
+     * @param value Date value.
+     * @return  `List<SObject>` List of SObject where its Date field <= value.
+     */
     protected virtual List<SObject> getRecordsByFieldLessThanOrEqualToValue(Schema.SObjectField field, Date value)
     {
         List<SObject> result = new List<SObject>();
@@ -46,11 +61,27 @@ public virtual inherited sharing class ApplicationSObjects extends fflib_SObject
         return result;
     }
 
+    /**
+     * Get records where its field value does not match the given value.
+     *
+     * @param field Id field.
+     * @param value Id value.
+     * @return  `List<SObject>` List of SObject where its field value does not
+     * match the given value.
+     */
     protected virtual List<SObject> getRecordsByFieldNotInValue(Schema.SObjectField field, Id value)
     {
         return getRecordsByFieldNotInValue(field, new Set<Id> { value });
     }
 
+    /**
+     * Get records where its field value does not match the given values.
+     *
+     * @param field Id field.
+     * @param value Set of Id value.
+     * @return  `List<SObject>` List of SObject where its field values does not
+     * match the given values.
+     */
     protected virtual List<SObject> getRecordsByFieldNotInValue(Schema.SObjectField field, Set<Id> values)
     {
         List<SObject> result = new List<SObject>();
@@ -66,11 +97,27 @@ public virtual inherited sharing class ApplicationSObjects extends fflib_SObject
         return result;
     }
 
+    /**
+     * Get records where its field value matches the given value.
+     *
+     * @param field Id field.
+     * @param value Id value.
+     * @return  `List<SObject>` List of SObject where its field value matches
+     * the given value.
+     */
     protected virtual List<SObject> getRecordsByFieldValue(Schema.SObjectField field, Id value)
     {
         return getRecordsByFieldValue(field, new Set<Id> { value });
     }
 
+    /**
+     * Get records where its field value matches the given values.
+     *
+     * @param field Id field.
+     * @param value Set of Id value.
+     * @return  `List<SObject>` List of SObject where its field value matches
+     * the given values.
+     */
     protected virtual List<SObject> getRecordsByFieldValue(Schema.SObjectField field, Set<Id> values)
     {
         List<SObject> result = new List<SObject>();
